--- a/simplechatrooms/webclient/styles/index.css
+++ b/simplechatrooms/webclient/styles/index.css
@@ -12,69 +12,103 @@ body {
 
 form {
     background: rgb(0, 51, 102);
-    padding: 3px;
-    position: fixed;
+    position: absolute;
     bottom: 0;
     width: 100%;
+    padding: 3px 0px 3px 0px;
 }
 
-form input {
+form #divMessage {
+    border: none;
+    width: 85%;
+    display: block;
+    float: left;
+}
+
+form #divMessage input {
     border: 0;
     font-size: 1em;
+    width: 100%;
+    display: block;
     padding: 10px;
-    width: 87%;
-    margin-right: .5%;
 }
 
-form button {
+form #divSend {
     font-size: 1em;
-    width: 12%;
+    width: 15%;
     background: rgb(255, 153, 0);
     border: none;
+    display: block;
+    float: left;
+}
+
+form #divSend button {
+    font-size: 1em;
+    width: 100%;
+    background: rgb(255, 153, 0);
+    border: none;
+    display: block;
     padding: 10px;
 }
 
 .rooms.container {
-  padding: 0px 0px 0px 3px;
+    width: 15%;
+    height: 100%;
+    position: absolute;
+    right: 0;
+    top: 0;
+    background-color: rgb(0, 51, 102);
+    padding: 0 0 0 3px;
+    box-sizing: content-box;
 }
 
-#rooms {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  position: fixed;
-  width: 13%;
-  height: 100%;
-  right: 0;
-  text-align: center;
-  background-color: rgb(0, 51, 102);
+.rooms.container #rooms {
+    list-style-type: none;
+    position: relative;
+    padding-top: 10px;
+    width: 100%;
+    height: 100%;
+    text-align: center;
 }
 
-#rooms > li {
-  height: 2.5em;
+.rooms.container #rooms>li {
+    height: 2.5em;
 }
 
-#rooms > li > a {
-  color: rgb(227, 227, 227);
+.rooms.container #rooms>li>a {
+    color: rgb(227, 227, 227);
 }
+
 
 /*#rooms > li > a:visited {
   color: rgb(167, 167, 167);
 }*/
 
-#rooms > li > a:hover {
-  color: rgb(187, 187, 187);
+#rooms>li>a:hover {
+    color: rgb(187, 187, 187);
 }
 
-#rooms > li > a:visited {
-  color: rgb(167, 167, 167);
+#rooms>li>a:visited {
+    color: rgb(167, 167, 167);
+}
+
+.messages.container {
+    margin: 0;
+    padding: 0;
+    width: 85%;
+    position: absolute;
+    padding-right: 3px;
+}
+
+.messages.container .scrollable {
+    position: relative;
+    overflow-y: auto;
 }
 
 #messages {
     list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 86%;
+    position: relative;
+    width: 100%;
 }
 
 #messages li {
@@ -83,4 +117,9 @@ form button {
 
 #messages li:nth-child(odd) {
     background: rgb(187, 187, 187);
+}
+
+.container .row > div {
+  padding-right: 3px;
+  padding-left: 3px;
 }
